--- a/assessment.html
+++ b/assessment.html
@@ -1,1 +1,129 @@
-this
+this<!DOCTYPE html>
+<html>
+<head>
+<title>Sample Webpage</title>
+</head>
+<body>
+
+<h2>TEXT</h2>
+<p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed blandit, eros sit amet euismod tincidunt, nisi leo vestibulum dui, sed tincidunt lacus ligula eu sapien. Proin at diam tincidunt, tincidunt ex at, venenatis nisl.</p>
+
+<p><q><em><b>Integer</b> auctor est ac fringilla euismod. Donec laoreet urna vel diam blandit venenatis. Nam fermentum turpis a mauris condimentum, vitae faucibus leo commodo.</q></em></p>
+
+<p><b>Vestibulum</b> elit nisi, posuere ut hendrerit a, molestie eu leo. Donec sit amet ullamcorper turpis. Mauris eu tellus blandit turpis fermentum dapibus eget sed ex. Vivamus auctor in velit ac suscipit. In hac habitasse platea dictumst.</p>
+
+<h2>TABLE</h2>
+<table>
+  <caption><b>Scores by quarter</b></caption>
+  <tr>
+    <b>
+    <th>Team Name</th>
+    <th>Q1</th>
+    <th>Q2</th>
+    <th>Q3</th>
+    <th>Q4</th>
+    <th>Final</th>
+   </b>
+  </tr>
+  <tr>
+    <td><b>Denver Broncos</b></td>
+    <td>7</td>
+    <td>3</td>
+    <td>0</td>
+    <td>7</td>
+    <td>17</td>
+  </tr>
+  <tr>
+    <td><b>Chicago Bears</b></td>
+    <td>0</td>
+    <td>6</td>
+    <td>3</td>
+    <td>6</td>
+    <td>15</td>
+  </tr>
+  <tr>
+    <b>
+    <th>Total</th>
+    <td>7</td>
+    <td>9</td>
+    <td>3</td>
+    <td>13</td>
+    <td>32</td>
+  </b>
+  </tr>
+</table>
+
+<h1>LIST</h1>
+<ul>
+  <li>
+    <img alt="Denver Broncos" src="https://static.www.nfl.com/t_q-best/league/api/clubs/logos/DEN" height="32" width="32">
+    <a href="https://www.denverbroncos.com/" title="Broncos Homepage"><strong>Denver Broncos</strong></a>
+    <ul>
+      <li>Coach: Gary Kubiak</li>
+      <li>QB
+        <ul>
+          <li>Brock Osweiler</li>
+          <li>Trevor Siemian</li>
+          <li>Peyton Manning (injured)</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <img alt="Chicago Bears logo" src="https://static.www.nfl.com/t_q-best/league/api/clubs/logos/CHI" height="32" width="32">
+    <strong>Chicago Bears</strong>
+    <ul>
+      <li>Coach: Gary Kubiak</li>
+      <li>QB
+        <ul>
+          <li>Jay Cutler</li>
+          <li>David Foles</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+</ul>
+
+<h1>FORM</h1>
+<form>
+  <label for="first-name">First:</label>
+  <input type="text" id="first-name" name="first-name" value="Bob">
+  <label for="last-name">Last:</label>
+  <input type="text" id="last-name" name="last-name" value="Dobbs"><br><br>
+  
+  <label for="favorite-sport">Favorite Sport:</label>
+  <select id="favorite-sport" name="favorite-sport">
+    <option value="soccer">Dog Mushing</option>
+    <option value="soccer">Surfing</option>
+    <option value="soccer">Pack Burro Racing</option>
+    <option value="soccer">Jousting</option>
+    <option value="soccer">Curling</option>
+    <option value="soccer">Picket Ball</option>
+  </select><br><br>
+  
+  <input type="checkbox" id="attended" name="interest" value="attended">
+  <label for="attended">I have: Attended</label>
+  
+  <input type="checkbox" id="played" name="interest" value="played">
+  <label for="played">Played</label>
+  
+  <input type="checkbox" id="coached" name="interest" value="coached">
+  <label for="coached">Coached</label>
+  
+  <input type="checkbox" id="bet" name="interest" value="bet">
+  <label for="bet">Bet on</label><br><br>
+  
+  <input type="radio" id="amateur" name="preference" value="amateur">
+  <label for="amateur">Amateur</label>
+  
+  <input type="radio" id="college" name="preference" value="college">
+  <label for="college">College</label>
+  
+  <input type="radio" id="professional" name="preference" value="professional">
+  <label for="professional">Professional</label><br><br>
+  
+  <input type="submit" value="Submit Query">
+</form>
+
+</body>
+</html>
